tests/bad-inline-1.c
// error: an external variable cannot be `inline'.

INLINE int jubs;
